--- a/Sandbox/Demo Pandas.ipynb
+++ b/Sandbox/Demo Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max.rows', 100)\n",
+    "pd.set_option('display.max.columns', 100)\n",
+    "pd.set_option('display.precision', 3)\n",
+    "pd.set_option('display.show_dimensions', True)\n",
+    "pd.set_option('format.formatter', {'table': {'border': '3px solid red'}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -24,22 +37,22 @@
        "4    7\n",
        "5    9\n",
        "6    6\n",
-       "dtype: int64"
+       "Length: 7, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = pd.Series([4,2,7,4,7,9,6])\n",
+    "s = pd.Series([4, 2, 7, 4, 7, 9, 6])\n",
     "s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +61,7 @@
        "9"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -72,10 +85,10 @@
        "Den Haag      070\n",
        "Amersfoort    033\n",
        "Haarlem       023\n",
-       "Name: kengetallen, dtype: string"
+       "Name: kengetallen, Length: 6, dtype: string"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +119,7 @@
        "'030'"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,100 +130,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>kengetallen</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stad</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Utrecht</th>\n",
-       "      <td>030</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Amsterdam</th>\n",
-       "      <td>020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rotterdam</th>\n",
-       "      <td>010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Den Haag</th>\n",
-       "      <td>070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Amersfoort</th>\n",
-       "      <td>033</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Haarlem</th>\n",
-       "      <td>023</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           kengetallen\n",
-       "stad                  \n",
-       "Utrecht            030\n",
-       "Amsterdam          020\n",
-       "Rotterdam          010\n",
-       "Den Haag           070\n",
-       "Amersfoort         033\n",
-       "Haarlem            023"
-      ]
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame(kengetallen)\n",
-    "df"
+    "df = pd.DataFrame(kengetallen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "kengetallen    string\n",
-       "dtype: object"
+       "Length: 1, dtype: object"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +180,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"10\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -279,6 +218,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>6 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -289,10 +229,12 @@
        "Amsterdam         NH\n",
        "Haarlem           NH\n",
        "Rotterdam         ZH\n",
-       "Den Haag          ZH"
+       "Den Haag          ZH\n",
+       "\n",
+       "[6 rows x 1 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +275,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"10\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -379,6 +321,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>6 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -389,10 +332,12 @@
        "Amsterdam         NH      020\n",
        "Haarlem           NH      023\n",
        "Rotterdam         ZH      010\n",
-       "Den Haag          ZH      070"
+       "Den Haag          ZH      070\n",
+       "\n",
+       "[6 rows x 2 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2510,7 +2455,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2524,7 +2469,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
