--- a/Sandbox/Demo Geopandas.ipynb
+++ b/Sandbox/Demo Geopandas.ipynb
@@ -5,32 +5,25 @@
    "execution_count": 1,
    "id": "d40e86d1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "partially initialized module 'fiona' has no attribute '_loading' (most likely due to a circular import)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/geopandas/lib/python3.9/site-packages/geopandas/__init__.py:7\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeodataframe\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GeoDataFrame  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marray\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m points_from_xy  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfile\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _read_file \u001b[38;5;28;01mas\u001b[39;00m read_file  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marrow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _read_parquet \u001b[38;5;28;01mas\u001b[39;00m read_parquet  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marrow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _read_feather \u001b[38;5;28;01mas\u001b[39;00m read_feather  \u001b[38;5;66;03m# noqa\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/geopandas/lib/python3.9/site-packages/geopandas/io/file.py:20\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     fiona_import_error \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(err)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfiona\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Env \u001b[38;5;28;01mas\u001b[39;00m fiona_env\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/geopandas/lib/python3.9/site-packages/fiona/__init__.py:85\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     82\u001b[0m     os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPATH\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m libdir\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfiona\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_loading\u001b[39;00m\n\u001b[0;32m---> 85\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mfiona\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_loading\u001b[49m\u001b[38;5;241m.\u001b[39madd_gdal_dll_directories():\n\u001b[1;32m     86\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfiona\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcollection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BytesCollection, Collection\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfiona\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdrvsupport\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m supported_drivers\n",
-      "\u001b[0;31mAttributeError\u001b[0m: partially initialized module 'fiona' has no attribute '_loading' (most likely due to a circular import)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geopandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "f4c57cad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can not open shape file.\n"
+     ]
+    }
+   ],
    "source": [
     "filename = 'WijkBuurtkaart_2020_v1/gemeente_2020_v1.shp'\n",
     "try:\n",
@@ -41,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "5a679932",
    "metadata": {},
    "outputs": [
@@ -49,12 +42,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "zsh:1: command not found: dir\r\n"
+      "\u001b[31mCBS Jan-Dirk.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mCBS.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mCBS7.py\u001b[m\u001b[m\r\n",
+      "CSV importeren.ipynb\r\n",
+      "Classification Penguins.ipynb\r\n",
+      "Classification Penguins.ipynb.zip\r\n",
+      "\u001b[31mCovid19.ipynb\u001b[m\u001b[m\r\n",
+      "Dash.ipynb\r\n",
+      "\u001b[31mDemo Dataframe.ipynb\u001b[m\u001b[m\r\n",
+      "Demo Geopandas.ipynb\r\n",
+      "Demo MatPlotLib2.ipynb\r\n",
+      "\u001b[31mDemo Matplotlib.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mDemo Numpy Array.ipynb\u001b[m\u001b[m\r\n",
+      "Demo Numpy.ipynb\r\n",
+      "Demo Numpy2.ipynb\r\n",
+      "Demo Pandas 1.ipynb\r\n",
+      "\u001b[31mDemo Pandas.ipynb\u001b[m\u001b[m\r\n",
+      "Demo Pandas2.ipynb\r\n",
+      "\u001b[31mDemo Standard Library.ipynb\u001b[m\u001b[m\r\n",
+      "Demo requests.ipynb\r\n",
+      "Demo2 Pandas.ipynb\r\n",
+      "Eerste demo-Copy1.ipynb\r\n",
+      "\u001b[31mEerste demo.ipynb\u001b[m\u001b[m\r\n",
+      "Eerste notebook.ipynb\r\n",
+      "Encoding.ipynb\r\n",
+      "GeoPandas.ipynb\r\n",
+      "\u001b[31mIPython.ipynb\u001b[m\u001b[m\r\n",
+      "Intro Numpy - Groep 29.ipynb\r\n",
+      "Intro Numpy.ipynb\r\n",
+      "Jupyter notebooks les 2.zip\r\n",
+      "KNMI.ipynb\r\n",
+      "Lineaire regressie.ipynb\r\n",
+      "Linear Regression.ipynb\r\n",
+      "\u001b[31mLogaritmisch Regressie.ipynb\u001b[m\u001b[m\r\n",
+      "Mijn eerste Jupyter Notebook.ipynb\r\n",
+      "\u001b[31mMultiple Regression.ipynb\u001b[m\u001b[m\r\n",
+      "Naamloos.ipynb\r\n",
+      "Naamloos1.ipynb\r\n",
+      "Naamloos2.ipynb\r\n",
+      "Naamloos3.ipynb\r\n",
+      "Naamloos4.ipynb\r\n",
+      "\u001b[31mNumpy Random.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mNumpy.ipynb\u001b[m\u001b[m\r\n",
+      "Opdracht 3.1 - Pandas.ipynb\r\n",
+      "Opdracht 3.2.ipynb\r\n",
+      "Opdracht 5.1.ipynb\r\n",
+      "Overgangen.ipynb\r\n",
+      "\u001b[31mPandas DataFrame.ipynb\u001b[m\u001b[m\r\n",
+      "Pandas Demo 2.ipynb\r\n",
+      "\u001b[31mPandas Plot.ipynb\u001b[m\u001b[m\r\n",
+      "Penguin dataset.ipynb\r\n",
+      "Plotly.ipynb\r\n",
+      "Python Basic.ipynb\r\n",
+      "Python Basic.ipynb.zip\r\n",
+      "\u001b[31mPython Basics.ipynb\u001b[m\u001b[m\r\n",
+      "Random Walk.ipynb\r\n",
+      "Read from internet.ipynb\r\n",
+      "Read_CSV.ipynb\r\n",
+      "Reading ca-500.ipynb\r\n",
+      "\u001b[31mRegressie.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mReshaping a dataframe.ipynb\u001b[m\u001b[m\r\n",
+      "Seaborn from Python Data Science Handbook.ipynb\r\n",
+      "\u001b[31mSeaborn.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mUntitled.ipynb\u001b[m\u001b[m\r\n",
+      "Untitled1.ipynb\r\n",
+      "Untitled2.ipynb\r\n",
+      "Untitled3.ipynb\r\n",
+      "Untitled3.py\r\n",
+      "Untitled4.ipynb\r\n",
+      "Untitled5.ipynb\r\n",
+      "Web scaping to dataframe.ipynb\r\n",
+      "ca-500.csv\r\n",
+      "\u001b[31mcovid19_worldwide.csv\u001b[m\u001b[m\r\n",
+      "data.csv\r\n",
+      "data.txt\r\n",
+      "demo machine learning.ipynb\r\n",
+      "demo markdown.ipynb\r\n",
+      "demo numpy nov.ipynb\r\n",
+      "demo pandas 2021.ipynb\r\n",
+      "demo pandas nov.ipynb\r\n",
+      "demo range.py\r\n",
+      "demo read_html.ipynb\r\n",
+      "demo read_sql.ipynb\r\n",
+      "demo_matplotlib.ipynb\r\n",
+      "demo_numpy_view.ipynb\r\n",
+      "dummy_data.csv\r\n",
+      "first_figure.html\r\n",
+      "haarlemmermeer.ipynb\r\n",
+      "landen.csv\r\n",
+      "leeftijden.csv\r\n",
+      "mpg dataset.ipynb\r\n",
+      "pandas mpg.ipynb\r\n",
+      "pearson father son.ipynb\r\n",
+      "plaatje.pdf\r\n",
+      "plaatje.png\r\n",
+      "plaatje2.pdf\r\n",
+      "plaatje2.png\r\n",
+      "provincies.csv\r\n",
+      "read_ca.py\r\n",
+      "\u001b[31mread_html.ipynb\u001b[m\u001b[m\r\n",
+      "\u001b[31mreading ca-500.csv.ipynb\u001b[m\u001b[m\r\n",
+      "result.txt\r\n",
+      "selection.csv\r\n",
+      "\u001b[31mx09.txt\u001b[m\u001b[m\r\n",
+      "\u001b[31mx09_prepared.txt\u001b[m\u001b[m\r\n"
      ]
     }
    ],
    "source": [
-    "!dir"
+    "!ls"
    ]
   },
   {
@@ -734,9 +831,9 @@
    "hash": "08ebd4036f24752a45db97068f413d345156a4c483814728a95106a820ee787d"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "geopandas",
    "language": "python",
-   "name": "python3"
+   "name": "geopandas"
   },
   "language_info": {
    "codemirror_mode": {
@@ -748,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
