--- a/Opdrachten/uitwerkingen/Opdracht 5.1 - Data preparatie.ipynb
+++ b/Opdrachten/uitwerkingen/Opdracht 5.1 - Data preparatie.ipynb
@@ -4341,13 +4341,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "auto-mpg.csv                  pca3.pickle\r\n",
-      "ca-500.csv                    penguins.csv\r\n",
-      "etmgeg_260.txt                penguins_test_dataset.csv\r\n",
-      "etmgeg_279.txt                penguins_training_dataset.csv\r\n",
-      "iris.csv                      scaler.pickle\r\n",
-      "iris_test_dataset.csv         test_data.csv\r\n",
-      "iris_training_dataset.csv     train_data.csv\r\n"
+      "auto-mpg.csv                  pca3.pickle\n",
+      "ca-500.csv                    penguins.csv\n",
+      "etmgeg_260.txt                penguins_test_dataset.csv\n",
+      "etmgeg_279.txt                penguins_training_dataset.csv\n",
+      "iris.csv                      scaler.pickle\n",
+      "iris_test_dataset.csv         test_data.csv\n",
+      "iris_training_dataset.csv     train_data.csv\n"
      ]
     }
    ],
@@ -6217,7 +6217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6240,5 +6240,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
