--- a/Opdrachten/uitwerkingen/Opdracht 5.2 - Classificatie.ipynb
+++ b/Opdrachten/uitwerkingen/Opdracht 5.2 - Classificatie.ipynb
@@ -5238,9 +5238,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5306,7 +5304,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6801,7 +6798,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11191,9 +11187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
@@ -11359,9 +11353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('\\n3-Nearest Neighbor **************************************************************\\n')\n",
@@ -11393,7 +11385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -11416,5 +11408,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
